updated default sequential scale to Leonardo brand scale, updated logo.svg. Corrected chart width in demo to wrap properly

--- a/packages/ui/src/scss/style.scss
+++ b/packages/ui/src/scss/style.scss
@@ -1911,6 +1911,10 @@ section {
   }
 }
 
+#sequentialScatter {
+  width: 350px;
+}
+
 .panel-ColorWheel {
   display: flex;
   justify-content: center;
